--- a/space_monitor/public/index.html
+++ b/space_monitor/public/index.html
@@ -10,6 +10,16 @@
 <body>
 	<div class="main-container">
 		<div class="row">
+			
+			<div class="mirror col-md-9">
+				<div class="row">
+					<div class="col-md-4 flexbox fullscreen-height">
+						<h1 class="question">How do you feel today?<br><span>Click the button describes your mood the best.</span><br><span class="glyphicon glyphicon-chevron-down"></span></h1>
+					</div>
+				</div>
+				<p class="quote">"It isn’t what you have, or who you are, or where you are, or what you are doing that makes you happy or unhappy. It is what you think about."</p>
+				
+			</div>
 			<aside class="dashboard col-md-3">
 				<h1 class="title">Clough Commons</h1>
 				<div class="now">
@@ -62,10 +72,6 @@
 					</div>
 				</div>
 			</aside>
-			<div class="mirror col-md-9">
-				<h1 class="question">How do you feel today?<br><span>Click the button describes your mood the best.</span><br><span class="glyphicon glyphicon-chevron-down"></span></h1>
-				<p class="quote fadeout">"It isn’t what you have, or who you are, or where you are, or what you are doing that makes you happy or unhappy. It is what you think about."</p>
-			</div>
 		</div>
 	</div>
 	
