Refined the sentence

--- a/space_monitor/public/index.html
+++ b/space_monitor/public/index.html
@@ -175,10 +175,10 @@
 	});
 	var showQuote = function(mood) {
 		if (mood === 1) {
-			$(".quote").text("\"It isn’t what you have, or who you are, or where you are, or what you are doing that makes you happy or unhappy. It is what you think about.\"");
+			$(".quote").text("\"Hey my dear, one of the secrets of a happy life is continuous small treats!\"");
 			
 		} else {
-			$(".quote").text("\"After every storm the sun will smile; for every problem there is a solution, and the soul's indefeasible duty is to be of good cheer.\"");
+			$(".quote").text("\"Hey my dear, don't be sad! After every storm the sun will smile; for every problem there is a solution, and the soul's indefeasible duty is to be of good cheer.\"");
 		}
 		$('.question').addClass("fadeout");
 		$(".quote").removeClass("fadeout");
