--- a/space_monitor/public/desktop.html
+++ b/space_monitor/public/desktop.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Moody Mirror</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.js"></script>
